flex/flex-tests/testData/as_regexp/LookBehind.as
var lookbehind:RegExp = /(?<!hello)(?<!a|bc{2})regular_expression/g;
var lookbehind2:RegExp = /(?<=a<error descr="Unequal min and max in counted quantifier not allowed inside lookbehind">{1,2}</error>)regular_expression/g;

